@@ -26,6 +26,7 @@ TODO inlining : substitute class+function type parameters in order to have fully
 	fixed completion for packages starting with 'a' or 'z'
 	added flash9.Lib.as
 	prevent double Movieclip class declaration when linking flash9 lib
+	allow numerical operations on type parameters constraint by Float
 
 2008-02-23: 1.18
 	some optimization and bugfix for as3 codegen
